# chainpilot-ai

./: .gitignore  README.md  pyproject.toml
chainpilot_ai/: hooks.py  modules.txt
chainpilot_ai/agent/: explanation_service.py  service.py
chainpilot_ai/ai/: __init__.py  assistant.py  contracts.py  guardrails.py  provider.py  service.py
chainpilot_ai/algorithms/: __init__.py  cash_release_pr_po.py  master_data_diagnosis.py  quality.py  registry.py  schemas.py  service.py  shortage_risk_14d.py
chainpilot_ai/approval/: service.py
chainpilot_ai/config/: desktop.py
chainpilot_ai/fixtures/: role.json  workspace.json
chainpilot_ai/learning/: service.py
demo_data/: README.md  mock_sap_snapshot_v1.json  phase0_demo.json
docs/: AI_FUNCTION_IMPLEMENTATION_RESEARCH.md  ALGORITHM_RUNTIME_V2_IMPLEMENTATION.md  ANAPLAN_PLANIQ_OPTIMIZER_ALGORITHM_UPGRADE.md  ANAPLAN_STYLE_SUPPLY_PLANNING_UI_DESIGN.md  CHAINPILOT_MENU_BUSINESS_LOGIC.md  FIORI_PLANNER_WORKSPACE_UI_REDESIGN.md  INDUSTRIAL_COMMAND_CENTER_FRONTEND_DESIGN.md  LLM_PROVIDER_SETUP.md  M1_PROGRESS_REPORT.md  M2_PROGRESS_REPORT.md  M3_PROGRESS_REPORT.md  M4_PROGRESS_REPORT.md  M5_PROGRESS_REPORT.md  MOCK_VALIDATION_AND_SAP_CONNECTOR_UPGRADE.md  MVP_IMPLEMENTATION_BACKLOG.md  PHASE_0_COMPLETION_REPORT.md  PHASE_0_STARTER_PACK.md  PRODUCTION_DECISION_ALGORITHM_DESIGN.md  PRODUCT_DESIGN.md  STRATEGY_OPTIMIZATION_CENTER_IMPLEMENTATION.md  UI5_ALL_PAGES_REDESIGN.md
tests/: test_algorithm_runtime_contract.py  test_assistant_config.py  test_llm_contract.py  test_phase_0_contract.py  test_strategy_optimization.py
(+151 files in other folders)
